# esp32c3-assistant

./: .gitignore  README.md  开关门角速度数据.xlsx
c3-assistant/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
c3-assistant/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main_init.c
c3-assistant/main/GXHTC3/: gxhtc3.c  gxhtc3.h
c3-assistant/main/LSM6DSO_imu/: lsm6dso.c  lsm6dso.h
c3-assistant/main/PCA9557/: pca9557_driver.c  pca9557_driver.h
c3-assistant/main/epaper/: EPD.c  EPD.h  EPD_Font.h  EPD_GUI.c  EPD_GUI.h  Pic.h
c3-assistant/main/es8311_audio/: es8311_config.h  i2s_es8311.c  i2s_es8311.h
c3-assistant/main/esp32_wifi/: common.h  esp32_wifi.c  esp32_wifi.h  get_ntptime.c  get_ntptime.h  get_weather.c  get_weather.h
c3-assistant/main/gpio_func/: gpio_func.c  gpio_func.h
c3-assistant/main/lvgl_gui/: lvgl_gui.c  lvgl_gui.h  lvgl_hw.c  lvgl_hw.h
c3-assistant/main/lvgl_gui/custom/: custom.c
c3-assistant/main/lvgl_gui/font/: font_alipuhui.c
c3-assistant/main/lvgl_gui/image/: moyoga.c
c3-assistant/main/qmi8658c_imu/: qmi8658c.c  qmi8658c.h
c3-assistant/main/sleep_wakeup/: sleep_wakeup.c  sleep_wakeup.h
c3-assistant/main/udp_com/: udp_server.c  udp_server.h
imu_data_record/: record_data_udp_imu.py
lvgl_Gui_Guider/: lvgl_Gui_Guider.guiguider
lvgl_Gui_Guider/lvgl-simulator/: lv_conf.h
lvgl_Gui_Guider/temp/: board.h
module/: 3D_screen_PCB_2024-12-06.step  实体1.3mf  底壳.3mf  底壳2.3mf  底壳3.3mf
mp3_to_pcm/: a.pcm  mp3topcm.py
